2013-09-23  Anders Carlsson  <andersca@apple.com>

        Test the waters and begin using lambdas
        https://bugs.webkit.org/show_bug.cgi?id=121809

        Reviewed by Andreas Kling.

        Use lambdas instead of static functions and function objects.
        
        * css/MediaQuery.cpp:
        (WebCore::MediaQuery::MediaQuery):
        * dom/MutationObserver.cpp:
        (WebCore::MutationObserver::deliverAllMutations):
        * page/CaptionUserPreferences.cpp:
        (WebCore::CaptionUserPreferences::sortedTrackListForMenu):

2013-09-23  Patrick Gansterer  <paroga@webkit.org>

        [WIN] Add implementation for WebCore::readFromFile()
        https://bugs.webkit.org/show_bug.cgi?id=119210

        Reviewed by Brent Fulgham.

        * platform/win/FileSystemWin.cpp:
        (WebCore::readFromFile):

2013-09-23  Patrick Gansterer  <paroga@webkit.org>

        [WIN] Implement WebMutableURLRequest::setHTTPBody()
        https://bugs.webkit.org/show_bug.cgi?id=91920

        Reviewed by Brent Fulgham.

        Add a method to FormData for growing the internal buffer with a given size.

        * platform/network/FormData.cpp:
        (WebCore::FormData::appendData):
        (WebCore::FormData::expandDataStore):
        * platform/network/FormData.h:

2013-09-23  Patrick Gansterer  <paroga@webkit.org>

        use NOMINMAX instead of #define min min
        https://bugs.webkit.org/show_bug.cgi?id=73563

        Reviewed by Brent Fulgham.

        Use NOMINMAX instead of #define min/max as a cleaner
        way of ensuring that Windows system header files don't
        define min/max as macro in the first place.

        * WebCorePrefix.h:
        * config.h:

2013-09-23  Simon Fraser  <simon.fraser@apple.com>

        REGRESSION (r155998): when zooming in, tiles are too small
        https://bugs.webkit.org/show_bug.cgi?id=121765

        Reviewed by Dean Jackson.

        In r155998 I made GraphicsLayerCA take root-relative transforms