@@ -1,3 +1,12 @@
+2013-09-23  Andreas Kling  <akling@apple.com>
+
+        CTTE: RenderObject::container() should return a RenderElement*.
+        <https://webkit.org/b/121811>
+
+        Reviewed by Antti Koivisto.
+
+        The containing renderer is always a RenderElement.
+
 2013-09-23  Anders Carlsson  <andersca@apple.com>
 
         Test the waters and begin using lambdas
